[gd_scene load_steps=14 format=2]

[ext_resource path="res://Game Objects/Enemies/enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game Objects/Enemies/Charger/charger.gd" type="Script" id=2]
[ext_resource path="res://Game Objects/Enemies/Charger/Default_State_Charger.gd" type="Script" id=3]
[ext_resource path="res://Game Objects/Enemies/Charger/Attack_State_Charger.gd" type="Script" id=4]
[ext_resource path="res://Game Objects/Enemies/Charger/Chase_State_Charger.gd" type="Script" id=5]
[ext_resource path="res://sprites/enemy sprites/charger.png" type="Texture" id=6]
[ext_resource path="res://Game Objects/NonPlayerHitbox.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.7601, 9.02082 )

[sub_resource type="Animation" id=2]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/path = NodePath("Attack_Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "charge"
tracks/0/type = "value"
tracks/0/path = NodePath("Charge_Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Idle_Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Move_Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "stun"
tracks/0/type = "value"
tracks/0/path = NodePath("Stun_Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[node name="Charger" instance=ExtResource( 1 )]
collision_layer = 4104
script = ExtResource( 2 )

[node name="jump_cast_head" parent="." index="0"]
position = Vector2( 15, 0 )
rotation = 0.0

[node name="jump_cast_feet" parent="." index="1"]
position = Vector2( 5, 2 )

[node name="charge_cast" type="RayCast2D" parent="." index="2"]
rotation = -1.5708
enabled = true
collision_mask = 35

[node name="PhysicsCollider" parent="." index="3"]
shape = SubResource( 1 )

[node name="DamagePlayerArea" parent="." index="4"]
collision_layer = 32776
collision_mask = 1026

[node name="DamageCollider" parent="DamagePlayerArea" index="0"]
shape = SubResource( 1 )

[node name="Default" parent="States" index="0"]
script = ExtResource( 3 )

[node name="Attack" parent="States" index="1"]
script = ExtResource( 4 )

[node name="Chase" parent="States" index="2"]
script = ExtResource( 5 )

[node name="DefaultStun" parent="States" index="3"]
editor/display_folded = true

[node name="Idle_Sprites" type="Sprite" parent="." index="7"]
texture = ExtResource( 6 )

[node name="Move_Sprites" type="Sprite" parent="." index="8"]
texture = ExtResource( 6 )

[node name="Attack_Sprites" type="Sprite" parent="." index="9"]
texture = ExtResource( 6 )

[node name="Charge_Sprites" type="Sprite" parent="." index="10"]
texture = ExtResource( 6 )

[node name="Stun_Sprites" type="Sprite" parent="." index="11"]
texture = ExtResource( 6 )

[node name="animator" type="AnimationPlayer" parent="." index="12"]
anims/attack = SubResource( 2 )
anims/charge = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/move = SubResource( 5 )
anims/stun = SubResource( 6 )

[node name="BashHitBox" type="Area2D" parent="." index="13"]
collision_layer = 4096
collision_mask = 4
script = ExtResource( 7 )
susceptible = "bash"
vulnerable = "bash"

[node name="CollisionShape2D" type="CollisionShape2D" parent="BashHitBox" index="0"]
position = Vector2( -4, -1 )
shape = SubResource( 1 )
